# FNN-Training-View

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PUSH_TO_GITHUB.md  README.md  README_EN.md  README_分发.md  README_部署.md  claude.md  start.bat  start.sh
.github/: CODEOWNERS.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: generate_all_caches.py  pyproject.toml  requirements.txt  test_all_datasets.py  test_api.py  test_async_training.py  test_iris.py  verify_cache.py
backend/app/: __init__.py  main.py
backend/app/api/: datasets.py  dependencies.py  inference.py  models.py  training.py
backend/app/data/: __init__.py  classification.py  regression.py
backend/app/data/cache/: and.npz  breast_cancer.npz  california_housing.npz  circles.npz  diabetes.npz  exponential.npz  iris.npz  linear.npz  mnist_simple.npz  moons.npz  multilinear.npz  or.npz  polynomial.npz  sine.npz  wine.npz  xor.npz
backend/app/middleware/: __init__.py  session.py
backend/app/utils/: model.py
docs/: API.md  USER_GUIDE.md
frontend/: index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/DatasetSelector/: DatasetSelector.tsx  DatasetTable.tsx  datasetInfo.ts  index.ts
frontend/src/lib/: api.ts
frontend/src/pages/: Home.tsx  Inference.tsx  SimpleTest.tsx  Training.tsx  UnifiedTraining.tsx
frontend/src/store/: networkStore.ts
frontend/src/types/: dataset.ts  neural.ts
(+11 files in other folders)
