[project]
name = "fnn-training-view-backend"
version = "0.1.0"
description = "Backend API for FNN Training Visualization"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "numpy>=1.26.2",
    "scikit-learn>=1.3.2",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
